20140417 - v0.2.0
  Add hubot alias command
  Update nodejs module requirements
20131226 - v0.1.2
  Fix for empty external-scripts and hubot-scripts
20131005 - v0.1.1
  Added log extension to default logfile
  Fixed params::display_name lookup
20131006 - v0.1.0:
  Initial public release
